--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "@ai-sdk/react": "^2.0.72",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
+    "@upstash/redis": "^1.35.6",
+    "@vercel/blob": "^2.0.0",
     "ai": "^5.0.72",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "shiki": "^3.13.0",
     "streamdown": "^1.4.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
