--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ai": "^5.0.72",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.1.0",
     "lucide-react": "^0.545.0",
     "nanoid": "^5.1.6",
     "next": "15.5.5",
