--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "jose": "^6.1.0",
     "lucide-react": "^0.545.0",
+    "marked": "^16.4.0",
     "nanoid": "^5.1.6",
     "next": "15.5.5",
     "react": "19.1.0",
