--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.72",
+    "@mistralai/mistralai": "^1.10.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@upstash/redis": "^1.35.6",
@@ -19,6 +20,7 @@
     "ai": "^5.0.72",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "deepl-node": "^1.20.0",
     "jose": "^6.1.0",
     "lucide-react": "^0.545.0",
     "marked": "^16.4.0",
