--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@ai-sdk/google": "^2.0.23",
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.72",
-    "@mistralai/mistralai": "^1.10.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@upstash/redis": "^1.35.6",
@@ -26,6 +25,7 @@
     "marked": "^16.4.0",
     "nanoid": "^5.1.6",
     "next": "15.5.5",
+    "openai": "^6.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "shiki": "^3.13.0",
