--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.72",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@upstash/redis": "^1.35.6",
     "@vercel/blob": "^2.0.0",
