--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "shiki": "^3.13.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
