--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ai-sdk/deepseek": "^1.0.23",
-    "@ai-sdk/google": "^2.0.23",
-    "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/react": "^2.0.72",
+    "@openrouter/ai-sdk-provider": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -27,7 +25,6 @@
     "marked": "^16.4.0",
     "nanoid": "^5.1.6",
     "next": "15.5.5",
-    "openai": "^6.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "shiki": "^3.13.0",
